[metadata]
name = pywevolor
version = 0.0.2
author = Tim Stallmann
author_email = tim@tim-maps.com
description = Python wrapper for interfaceing with the Wevolor API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timstallmann/pywevolor
project_urls =
    Bug Tracker = https://github.com/timstallmann/pywevolorissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
